@@ -57,7 +57,75 @@
 
 ## Deprecated in 4.4.0
 is.R <- function() {
-    .Deprecated(package = "base")
+    ## eventually use a custon message
+    p <- Sys.getenv("_R_DEPRECATED_IS_R_")
+    if(nzchar(p)) {
+        msg <- paste0(gettextf("'%s' is deprecated.\n", "is.R"),
+                      'See help("Deprecated") and help("base-deprecated")')
+        if (p == "warn") {
+            ## disallow deferred warnings:
+            ## warning(<condition>) does not support immediate. = TRUE
+            op <- getOption("warn")
+            if(op == 0L) options(warn = 1L)
+            warning(warningCondition(msg, class = "deprecatedWarning"))
+            if(op == 0L) options(warn = op)
+        }
+        else if (p == "error") {
+            .Deprecated(package = "base")
+            ## temporary, so do not translate
+            stop('deprecation turned into an error', domain = NA)
+        }
+        else if (p == "traceback") {
+            calls <- rev(sys.calls())
+            msg <- paste0(msg, "\nCalls:\n",
+                          paste0(sprintf("%2i: ", seq_along(calls)),
+                                 vapply(calls, deparse1, "",
+                                        collapse = "\n    "),
+                                 collapse = "\n"))
+            message(msg, domain = NA)
+        }
+        else if (p == "where") {
+            call <- sys.call(-1)
+            if(!is.null(call)) {
+                msg <- paste0(msg,"\nCall: ", deparse1(call))
+                env <- environment(sys.function(-1))
+                if (isNamespace(env)) {
+                    env <- getNamespaceName(env)
+                    msg <- paste0(msg, "\n",
+                                  sprintf("from namespace %s", sQuote(env)))
+                }
+            }
+            op <- getOption("warn")
+            if(op == 0L) options(warn = 1L)
+            warning(warningCondition(msg, class = "deprecatedWarning"))
+            if(op == 0L) options(warn = op)
+        }
+        else if (FALSE && p == "self") {
+            call <- sys.call(-1)
+            done <- FALSE
+            if(!is.null(call)) {
+                msg <- paste0(msg,"\nCall: ", deparse1(call))
+                env <- environment(sys.function(-1))
+                if (isNamespace(env)) {
+                    env <- getNamespaceName(env)
+                    this <- Sys.getenv("_R_CHECK_PACKAGE_NAME_", "unknown")
+                    done <- TRUE
+                    if (this != env) {
+                        msg <- paste0(msg, "\n",
+                                      sprintf("from namespace %s", sQuote(env)))
+                        message(msg, domain = NA)
+                    } else
+                         warning(warningCondition(msg, class = "deprecatedWarning"))
+                }
+            }
+            if(!done)
+                warning(warningCondition(msg, class = "deprecatedWarning"))
+        }
+        else
+            message("unknown value of _R_DEPRECATED_IS_R_ ", sQuote(p),
+                    " was ignored")
+    } else
+        .Deprecated(package = "base")
+
     TRUE
 }
-
